refactored notifications, changed logic and hooked to telemetry collect (#35)
